# CLS_Example

./: CMakeLists.txt  README.md  VERSION
.github/workflows/: ubuntu.yaml  windows.yaml
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: tools.cmake  utility.cmake  version_header.cmake
examples/: CMakeLists.txt  getting_started.cpp
examples/00_GettingStarted/: main.cpp
include/cls_example/: cls_example.hpp  core.hpp  version.hpp
src/: cls_example.cpp  core.cpp  version.hpp.in
tests/: CMakeLists.txt  cls_example.cpp  core.cpp
